[gd_scene load_steps=6 format=3 uid="uid://b5s5bo2g5488s"]

[ext_resource type="Script" path="res://traps/test_trap/trap.gd" id="1_jorpx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nig73"]
size = Vector3(1, 0.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bbrug"]
size = Vector3(1, 3, 1)

[sub_resource type="BoxMesh" id="BoxMesh_75w8q"]
size = Vector3(1, 3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dowoj"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.247059)

[node name="Trap" type="StaticBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_jorpx")
place_offset = Vector3(0, 1.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_nig73")

[node name="TriggerArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerArea"]
shape = SubResource("BoxShape3D_bbrug")

[node name="PlaceArea" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlaceArea"]
shape = SubResource("BoxShape3D_bbrug")

[node name="Model" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_75w8q")
skeleton = NodePath("../PlacementGuide")

[node name="PlacementGuide" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_dowoj")
mesh = SubResource("BoxMesh_75w8q")

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
